also set language level in maven language level now down to 8. .toList() no longer working subed with .collect(Collectors.tolist())